fixes image opacity on interaction on tablet view

--- a/source/stylesheets/includes/_style.sass
+++ b/source/stylesheets/includes/_style.sass
@@ -223,3 +223,5 @@ article.project
     a img
       width: 100%
       height: auto
+    a:hover img
+      opacity: 1
